# hedwig

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Procfile  README.md  algorithm.yaml  criteria.yaml  nixpacks.toml  pyproject.toml  railway.toml  seed.ralph-fix.yaml  seed.ralph-gaps.yaml  seed.ralph.yaml  seed.yaml  setup.sh  sovereignty.yaml
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: codex-task.yml  config.yml
.github/workflows/: pr-requires-issue-link.yml
docs/: HOSTING.md  LIBRARY_EXTRACTION.md  README.ja.md  README.ko.md  README.zh.md  VISION_v3.md  absorption_backlog.md  evolve-findings.md  ouroboros-final-report.md  resume.md
docs/interviews/: 2026-03-16-socratic-interview-v1.md  2026-04-08-socratic-interview-v2.md
docs/phase_reports/: FINAL.md  audit_v3.md  interview_gap_audit.md  phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  sns_platform_gap.md
docs/plans/: 2026-03-22-claude-limit-auto-resume-design.md  2026-03-22-claude-limit-auto-resume.md  2026-03-22-codex-local-orchestration-design.md  (+2 more)
hedwig/: __main__.py  agent.py  claude_auto_resume.py  config.py  main.py  mcp_server.py  models.py  quickstart.py  sovereignty.py
migrations/: 001_create_tables.sql  001_multi_tenant_schema.sql
scripts/: claude-auto-resume  codex_orchestrator.py  deploy_railway.sh  doctor-codex-local.sh  handoff_packet.py  setup-codex-local.sh
tests/: conftest.py  test_agent_collector_strategy.py  test_auto_context_fallback.py  test_billing_template_tiers.py  test_claude_auto_resume.py  test_dashboard_about_route.py  test_dashboard_billing_route.py  test_dashboard_generative.py  test_dashboard_health.py  test_dashboard_imports.py  test_dashboard_invite.py  test_dashboard_ko_landing.py  test_dashboard_privacy_route.py  test_dashboard_saas_landing.py  test_dashboard_settings.py  test_dashboard_setup_smtp.py  test_dashboard_signals_export.py  test_dashboard_signals_search.py  test_dashboard_stats.py  test_dashboard_terms_route.py  test_dashboard_zh_landing.py  test_dockerfile.py  test_dockerignore.py  test_email_notifications.py  test_github_trending_source.py  test_hosting_docs.py  test_native_imports.py  test_native_updater.py  test_nixpacks_toml.py  test_normalizer_timeout.py  test_oauth_build_url.py  test_oauth_providers.py  test_onboarding_template.py  test_operator_key_missing.py  test_operator_keys_quotas.py  test_pre_scorer.py  test_procfile.py  test_railway_toml.py  test_run_stats.py  test_saas_imports.py  (+24 more)
(+121 files in other folders)
