[project]
name = "hedwig"
version = "3.0.0"
description = "Self-Evolving Personal AI Signal Radar — algorithm sovereignty for individuals (SaaS + Native)"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "supabase>=2.0",
    "slack-sdk>=3.0",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "yt-dlp>=2025.0.0",
]

[project.optional-dependencies]
native = [
    "pywebview>=5.0",
    "pyobjc>=10.0; sys_platform == 'darwin'",
    "rumps>=0.4; sys_platform == 'darwin'",
]

[project.scripts]
hedwig = "hedwig.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
